# zip-to-github-uploader

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ZIP-to-GitHub-Uploader-x86_64.AppImage  backdoor_script.txt  github_test.txt  pyproject.toml  suspicious_backdoor.exe.txt  test_dokument.txt  upload_history.json
.github/workflows/: ci.yml  lint.yml  tests.yml
AppDir/: .DirIcon  AppRun  zip-github-uploader.desktop
demos/: deploy_gui.py  example_usage.py  live_demo.py  live_demo_simple.py  web_api_example.py  web_interface_demo.py
deploy/: build_appimage.py  build_appimage.sh  create_release.sh  deploy.sh  test_appimage.sh
docs/: ARCHITECTURE.md  README_AppImage.md
src/: __init__.py  batch_uploader.py  dashboard.py  security_validation.py  streamlit_app.py  streamlit_app_fixed.py  uploader_utils.py  webhook_integration.py
src/shared/: generate_readme.py  gpt_analysis_github_copilot.py
tests/: demo_security_validation.py  test_security_validation.py  validate_real_files.py
